--- a/my-project/package.json
+++ b/my-project/package.json
@@ -54,7 +54,8 @@
     }
   },
   "dependencies": {
-    "axios": "^0.18.0",
+    "axios": "^0.18.1",
+    "axios-cache-adapter": "^2.5.0",
     "bootstrap-vue": "^2.15.0",
     "vue": "^2.5.16",
     "vue-electron": "^1.0.6",
@@ -62,7 +63,7 @@
     "vue2-dropzone": "^3.6.0",
     "vuex": "^3.0.1",
     "vuex-electron": "^1.0.0",
-    "wedia-vue": "^11.24.1-5"
+    "wedia-vue": "^11.24.1-10"
   },
   "devDependencies": {
     "ajv": "^6.5.0",
