rm logs tab / server init / confirm on clear files / account tab

--- a/my-project/package.json
+++ b/my-project/package.json
@@ -57,13 +57,24 @@
     "axios": "^0.18.1",
     "axios-cache-adapter": "^2.5.0",
     "bootstrap-vue": "^2.15.0",
+    "cors": "^2.8.5",
+    "filepond": "^4.17.1",
+    "filepond-plugin-file-validate-size": "^2.2.1",
+    "filepond-plugin-file-validate-type": "^1.2.5",
+    "filepond-plugin-image-preview": "^4.6.4",
+    "formidable": "^1.2.2",
     "vue": "^2.5.16",
     "vue-electron": "^1.0.6",
+    "vue-filepond": "^6.0.2",
+    "vue-mq": "^1.0.1",
+    "vue-radial-progress": "^0.3.1",
     "vue-router": "^3.0.1",
+    "vue-simple-alert": "^1.1.1",
+    "vue2-circle-progress": "^1.2.3",
     "vue2-dropzone": "^3.6.0",
     "vuex": "^3.0.1",
     "vuex-electron": "^1.0.0",
-    "wedia-vue": "^11.24.1-10"
+    "wedia-vue": "^11.24.1-14"
   },
   "devDependencies": {
     "ajv": "^6.5.0",
