ui + problem clear histo

--- a/my-project/package.json
+++ b/my-project/package.json
@@ -61,6 +61,7 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "filepond": "^4.18.0",
+    "filepond-plugin-file-encode": "^2.1.6",
     "filepond-plugin-file-validate-size": "^2.2.1",
     "filepond-plugin-file-validate-type": "^1.2.5",
     "filepond-plugin-image-preview": "^4.6.4",
@@ -102,6 +103,7 @@
     "electron-builder": "^20.19.2",
     "electron-debug": "^1.5.0",
     "electron-devtools-installer": "^2.2.4",
+    "electron-packager": "^14.2.1",
     "file-loader": "^1.1.11",
     "html-webpack-plugin": "^3.2.0",
     "inject-loader": "^4.0.1",
